add(server): registry description fix(ui): service install command fix(ui): service uninstall command add: service metadata

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,7 @@
     <body>
         <main>
             <h1>Registry</h1>
+            <p>{{ config.description }}</p>
             <hr />
 
             {% block content %}{% endblock %}
