add: service types add: service build steps add(server): registry name config chore: bump version (v0.4.7 -> v0.5.0)

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,7 @@
                 width: 100%;
                 resize: vertical;
                 min-height: 10rem;
+                font-family: monospace;
             }
 
             form,
@@ -139,7 +140,7 @@
 
     <body>
         <main>
-            <h1>Registry</h1>
+            <h1>{{ config.name }}</h1>
             <p>{{ config.description }}</p>
             <hr />
 
