--- a/templates/manage.html
+++ b/templates/manage.html
@@ -93,7 +93,7 @@ block content %}
     </fieldset>
 
     <!-- prettier-ignore -->
-    <script type="text/plain" id="key">{{ key }}</script>
+    <script type="text/plain" id="key">{{ key|safe }}</script>
 
     <script>
         globalThis.start_service = (e, name) => {
@@ -103,7 +103,7 @@ block content %}
                     "Content-Type": "application/json",
                 },
                 body: JSON.stringify({
-                    key: document.getElementById("key").innerText,
+                    key: document.getElementById("key").innerHTML,
                     service: name,
                 }),
             })
@@ -142,7 +142,7 @@ block content %}
                     "Content-Type": "application/json",
                 },
                 body: JSON.stringify({
-                    key: document.getElementById("key").innerText,
+                    key: document.getElementById("key").innerHTML,
                     service: name,
                 }),
             })
@@ -184,7 +184,7 @@ block content %}
                     "Content-Type": "application/json",
                 },
                 body: JSON.stringify({
-                    key: document.getElementById("key").innerText,
+                    key: document.getElementById("key").innerHTML,
                     service: name,
                 }),
             })
@@ -205,7 +205,7 @@ block content %}
                     "Content-Type": "application/json",
                 },
                 body: JSON.stringify({
-                    key: document.getElementById("key").innerText,
+                    key: document.getElementById("key").innerHTML,
                     service: name,
                 }),
             })
@@ -235,7 +235,7 @@ block content %}
                         "Content-Type": "application/json",
                     },
                     body: JSON.stringify({
-                        key: document.getElementById("key").innerText,
+                        key: document.getElementById("key").innerHTMLt,
                         registry: e.target.registry.value,
                         service: e.target.service.value,
                     }),
