--- a/crates/sproc/templates/manage.html
+++ b/crates/sproc/templates/manage.html
@@ -235,7 +235,7 @@ block content %}
                         "Content-Type": "application/json",
                     },
                     body: JSON.stringify({
-                        key: document.getElementById("key").innerHTMLt,
+                        key: document.getElementById("key").innerHTML,
                         registry: e.target.registry.value,
                         service: e.target.service.value,
                     }),
