--- a/crates/sproc/templates/base.html
+++ b/crates/sproc/templates/base.html
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="item">
-                    <a href="https://github.com/hkauso/sproc">📖 View Source</a>
+                    <a href="https://github.com/hkauso/xsu">📖 View Source</a>
                 </div>
 
                 <div class="item">
