add(sproc server): book

--- a/crates/sproc/templates/noresults.html
+++ b/crates/sproc/templates/noresults.html
@@ -8,6 +8,7 @@ block content %}
 
     <ul>
         <li><a href="?action=List">🌐 Service list</a></li>
+        <li><a href="?action=Book">🌐 Book</a></li>
         <li><a href="?action=Manage">🔐 Manage server</a></li>
     </ul>
 
