--- a/crates/sproc/templates/base.html
+++ b/crates/sproc/templates/base.html
@@ -101,6 +101,7 @@
                 overflow-wrap: normal;
                 text-wrap: pretty;
                 word-wrap: break-word;
+                overflow-wrap: anywhere;
             }
 
             textarea {
@@ -145,13 +146,56 @@
                 cursor: not-allowed;
                 opacity: 75%;
             }
+
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6 {
+                margin: 0;
+                font-weight: 700;
+                width: -moz-max-content;
+                width: max-content;
+                position: relative;
+            }
+
+            h1 {
+                font-size: 2rem;
+                text-align: center;
+                width: 100%;
+            }
+
+            h1.left {
+                text-align: left;
+            }
+
+            h2 {
+                font-size: 1.75rem;
+            }
+
+            h3 {
+                font-size: 1.5rem;
+            }
+
+            h4 {
+                font-size: 1.25rem;
+            }
+
+            h5 {
+                font-size: 1rem;
+            }
+
+            h6 {
+                font-size: 0.75rem;
+            }
         </style>
     </head>
 
     <body>
         <main>
-            <h1>{{ config.name }}</h1>
-            <p>{{ config.description }}</p>
+            <h1 class="left">{{ config.name }}</h1>
+            {{ xsu_util::ui::render_markdown(config.description)|safe }}
             <hr />
 
             {% block content %}{% endblock %}
