add(sproc server): split routes add(sproc server): multiple books

--- a/crates/sproc/templates/base.html
+++ b/crates/sproc/templates/base.html
@@ -147,6 +147,11 @@
                 opacity: 75%;
             }
 
+            blockquote {
+                padding-left: 1rem;
+                font-style: italic;
+            }
+
             h1,
             h2,
             h3,
@@ -203,15 +208,15 @@
             <hr />
             <div class="footernav">
                 <div class="item">
-                    <a href="?">🌐 Home</a>
+                    <a href="/">🌐 Home</a>
                 </div>
 
                 <div class="item">
-                    <a href="https://github.com/hkauso/xsu">📖 View Source</a>
-                </div>
-
-                <div class="item">
-                    <a href="https://docs.rs/sproc">📖 Documentation</a>
+                    <a
+                        href="https://github.com/hkauso/xsu/tree/master/crates/sproc"
+                    >
+                        📖 View Source
+                    </a>
                 </div>
             </div>
         </main>
