--- a/crates/sproc/templates/manage.html
+++ b/crates/sproc/templates/manage.html
@@ -3,7 +3,7 @@ block content %}
 <article>
     <div class="footernav">
         <div class="item">
-            <a href="?">&lt; Back</a>
+            <a href="/">&lt; Back</a>
         </div>
 
         <div class="item">
