--- a/crates/sproc/templates/noresults.html
+++ b/crates/sproc/templates/noresults.html
@@ -7,9 +7,9 @@ block content %}
     </p>
 
     <ul>
-        <li><a href="?action=List">🌐 Service list</a></li>
-        <li><a href="?action=Book">🌐 Book</a></li>
-        <li><a href="?action=Manage">🔐 Manage server</a></li>
+        <li><a href="/registry">🌐 Service list</a></li>
+        <li><a href="/book">🌐 Book</a></li>
+        <li><a href="/">🔐 Manage server</a></li>
     </ul>
 
     <hr />
