--- a/crates/sproc/templates/edit_page.html
+++ b/crates/sproc/templates/edit_page.html
@@ -1,19 +1,16 @@
-{% extends "base.html" %} {% block title %}{{ page.1 }} - {{ config.name }}{%
+{% extends "base.html" %} {% block title %}{{ page.0 }} - {{ config.name }}{%
 endblock %} {% block content %}
 <article>
     {% let fake_name = page.1.replace(".md", "") %}
 
     <div class="footernav">
-        <div class="item"><a href="/book/{{ page.0 }}">&lt; Back</a></div>
+        <div class="item"><a href="/book">&lt; Root</a></div>
         <div class="item">
-            <a href="/book/{{ page.0 }}/{{ page.1 }}">View</a>
-        </div>
-        <div class="item">
-            <a href="/book/{{ page.0 }}/{{ page.1 }}/edit">Edit</a>
+            <a href="/book/{{ page.0 }}">View</a>
         </div>
     </div>
 
-    <h2>{{ page.1 }}</h2>
+    <h2>{{ page.0 }}</h2>
 
     <!-- book page edit page -->
     <form id="edit_form">
@@ -35,13 +32,13 @@ endblock %} {% block content %}
             <legend>Page</legend>
             <label for="content">Content</label>
             <!-- prettier-ignore -->
-            <textarea name="content" id="content" required>{{ page.2 }}</textarea>
+            <textarea name="content" id="content" required>{{ page.1 }}</textarea>
         </fieldset>
 
         <fieldset>
             <legend>Actions</legend>
 
-            <div style="display: flex; gap: 0.2rem">
+            <div class="flex gap-1">
                 <button>Submit</button>
                 <button type="button" id="delete_button">Delete</button>
             </div>
@@ -51,7 +48,7 @@ endblock %} {% block content %}
     <script>
         document.getElementById("edit_form").addEventListener("submit", (e) => {
             e.preventDefault();
-            fetch("/api/registry/book/{{ page.0 }}/{{ fake_name }}", {
+            fetch("/api/registry/book/{{ page.0 }}", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -70,7 +67,7 @@ endblock %} {% block content %}
         document
             .getElementById("delete_button")
             .addEventListener("click", (e) => {
-                fetch("/api/registry/book/{{ page.0 }}/{{ fake_name }}", {
+                fetch("/api/registry/book/{{ page.0 }}", {
                     method: "DELETE",
                     headers: {
                         "Content-Type": "application/json",
