--- a/crates/sproc/templates/manage.html
+++ b/crates/sproc/templates/manage.html
@@ -15,10 +15,10 @@ block content %}
     <fieldset>
         <legend>Server Services</legend>
 
-        <div style="display: flex; flex-direction: column">
+        <div class="flex flex-col">
             {% for service in services %}
             <!-- prettier-ignore -->
-            <div style="display: flex; gap: 0.5rem">
+            <div class="flex gap-2">
                 {% if !service.2 %}
                     <button onclick="globalThis.start_service(event, '{{ service.0 }}')">Start</button>
                     <button 
@@ -41,7 +41,7 @@ block content %}
                 <details style="width: 100%">
                     <summary>{{ service.0 }}</summary>
 
-                    <div style="display: flex; flex-direction: column">
+                    <div class="flex flex-col">
                         <pre><code id="{{ service.0 }}/boxes/command">{{ service.1.command }}</code></pre>
                         <pre><code id="{{ service.0 }}/boxes/info"></code></pre>
                     </div>
@@ -54,12 +54,12 @@ block content %}
     <fieldset>
         <legend>Install Service</legend>
 
-        <div style="display: flex; flex-direction: column">
+        <div class="flex flex-col">
             <form id="install_form">
                 <div class="row">
                     <label for="registry">Registry</label>
 
-                    <div style="display: flex; gap: 0.2rem">
+                    <div class="flex gap-1">
                         <button
                             onclick="document.getElementById('registry').value = window.location.host"
                             title="Use this registry"
