--- a/crates/sproc/templates/homepage.html
+++ b/crates/sproc/templates/homepage.html
@@ -9,6 +9,7 @@ block content %}
     <ul>
         <li><a href="/registry">🌐 Service list</a></li>
         <li><a href="/book">🌐 Book</a></li>
+        <li><a href="/account">🌐 Account</a></li>
     </ul>
 
     <hr />
