--- a/crates/sproc/templates/base.html
+++ b/crates/sproc/templates/base.html
@@ -199,6 +199,10 @@
                 border-radius: calc(var(--radius) * 2);
             }
 
+            fieldset label:not(:first-of-type) {
+                margin-top: 0.5rem;
+            }
+
             fieldset .row {
                 display: flex;
                 justify-content: space-between;
