--- a/crates/sproc/templates/homepage.html
+++ b/crates/sproc/templates/homepage.html
@@ -4,11 +4,12 @@ block content %}
     {{ xsu_util::ui::render_markdown(config.description)|safe }}
     <hr />
 
-    <p>Please select a valid page to continue.</p>
+    <p>Please select a registry service to continue.</p>
 
     <ul>
         <li><a href="/registry">🌐 Service list</a></li>
         <li><a href="/book">🌐 Book</a></li>
+        <li><a href="/doc">🔐 Docshare</a></li>
         <li><a href="/account">🌐 Account</a></li>
     </ul>
 
